# news-topic-classifier

./: .dvcignore  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: config.yaml
configs/data/: huffpost.yaml
configs/export/: onnx.yaml
configs/infer/: default.yaml
configs/logging/: mlflow.yaml
configs/model/: baseline_embedding_bag.yaml  bert_finetune.yaml
configs/serving/: mlflow.yaml
configs/trainer/: default.yaml
data/: examples.dvc  processed.dvc  raw.dvc  splits.dvc
huffpost_classifier/: __init__.py  cli_export.py  cli_infer.py  cli_package_mlflow.py  cli_train.py
huffpost_classifier/data/: datamodule_baseline.py  datamodule_bert.py  download.py  dvc_utils.py  preprocess.py  splits.py  vocab.py
huffpost_classifier/export/: __init__.py  onnx_export.py
huffpost_classifier/inference/: predict_baseline.py  predict_bert.py
huffpost_classifier/models/: baseline_model.py  baseline_module.py  bert_module.py
huffpost_classifier/serving/: mlflow_pyfunc.py
huffpost_classifier/training/: callbacks.py  metrics.py  train_baseline.py  train_bert.py
huffpost_classifier/utils/: git.py  logging.py  paths.py  seed.py
